# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import expensesRouter from "./expenses";
+import accountsRouter from "./accounts";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(expensesRouter);
+router.use(accountsRouter);
 
 export default router;
